UPDATE ON CP CLASS TRIAL

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <h1 class="orange">Awesome HTML</h1>
+      <h1 class="orange">Awesome FUN HTML</h1>
       <h1>Just a normal.</h1>
       <h2 class="quicklinks__link-content">Subheading</h2>
       <h3>sub-sub-heading</h3>
